--- a/stylesheets/less/screen.less
+++ b/stylesheets/less/screen.less
@@ -3,6 +3,7 @@
 /* Colors */
 @copy_color: #2d2b2f;
 @light_copy_color: #616060;
+@lighter_copy_color: #777575;
 @light_neutral_color: #d2ccc8;
 @mid_neutral_color: #aaa39e;
 @dark_neutral_color: #85807c;
@@ -12,7 +13,13 @@
 @warm_accent_color: #d7b496;          
 
 .reset{ padding: 0; margin: 0; }
-.reset_list{ .reset; list-style-type: none; }
+.reset_list{ .reset; list-style-type: none; }      
+
+.transition(@duration:0.2s, @ease:ease-out) {
+  -webkit-transition: all @duration @ease;
+  -moz-transition: all @duration @ease;
+  transition: all @duration @ease;
+}
 
 /* Fonts */
 .serif{ font-family: 'adobe-caslon-pro', Garamond, 'Hoefler Text', 'Times New Roman', Times, serif; }
@@ -22,7 +29,7 @@ html{ background: @copy_color url(../../images/backgrounds/html.png); .reset; he
   body{ .serif; color: @copy_color; background: @light_neutral_color repeat-y url(../../images/backgrounds/body.jpg); margin: 0 auto; width: 920px; padding: 20px; min-height: 100%; box-shadow: 0 0 30px rgba(0,0,0,.6); text-shadow: 0 1px 0 rgba(255,255,255,.4); }   
 }
            
-a{ color: @contrasting_color; text-decoration: none; 
+a{ color: @contrasting_color; text-decoration: none; .transition; 
   &:hover{ color: @contrasting_color - 30%; }
 }
 
@@ -39,15 +46,15 @@ header.main{ background: no-repeat bottom right url(../../images/divider.png); o
   nav{ float: right; clear: right;
     ul{ .reset_list; margin-top: 20px;
       li{ .reset; float: left; margin-left: 40px;
-        a{ color: @light_copy_color; display: block; padding: 10px; .sans; font-size: 20px;
+        a{ color: @light_copy_color; display: block; padding: 10px; .sans; font-size: 19px; text-transform: uppercase;
           &:hover{ color: @contrasting_color; }
         }
       }
     }
   }  
   
-  .social{ clear: right; float: right; color: @light_copy_color; font-style: italic; margin-right: 10px; margin-top: 20px; margin-bottom: 10px;
-    a{ .sans; color: @light_copy_color; font-style: normal; font-size: 1.1em; 
+  .social{ clear: right; float: right; color: @lighter_copy_color; font-style: italic; margin-right: 10px; margin-top: 20px; margin-bottom: 10px;
+    a{ .sans; color: @light_copy_color; font-style: normal; font-size: 1.1em; text-transform: uppercase;
       &:hover{ color: @contrasting_color; }
     }
   }                     
