Stubbing out events page

--- a/stylesheets/less/screen.less
+++ b/stylesheets/less/screen.less
@@ -67,7 +67,10 @@ header.main{ background: no-repeat bottom right url(../../images/divider.png); o
 }       
 
 /* Content */
-section.main{ min-height: 350px; }        
+section.main{ min-height: 350px; 
+  .left_column{ width: 480px; float: left; margin-right: 100px; }
+  .right_column{ width: 240px; float: left; }
+}        
 
 /* Footer */
 footer.main{ padding: 20px 20px 0; margin-top: 20px; background: no-repeat top center url(../../images/backgrounds/footer.png); overflow: hidden;
@@ -109,4 +112,30 @@ footer.main{ padding: 20px 20px 0; margin-top: 20px; background: no-repeat top c
       p{ font-size: 15px; margin-bottom: 1em; line-height: 18px; }
     }
   }
+}       
+
+/* Events */
+.featured_events{
+  .featured_event{ overflow: hidden; margin-bottom: 20px; padding-bottom: 20px; background: no-repeat bottom right url(../../images/divider.png);
+    &:last-child{ background: none; margin: 0; }
+    .date, .time{ font-size: 19px; color: @light_copy_color; }
+    .date{ float: left; }
+    .time{ float: right; }   
+    h4{ clear: both; float: left; font-size: 28px; margin: 0; }
+    .cost{ float: right; font-size: 15px; margin-top: 12px; }
+    img{ display: block; clear: both; margin-bottom: 5px; }                 
+    a{ .sans; font-size: 26px; display: block; text-align: right; }
+  }
+}       
+
+.upcoming_shows{ .reset_list;
+  li{ margin: 0 0 5px; padding: 5px; overflow: hidden;                                                                           
+    &.month{  border: 1px solid #999; border-width: 1px 0; }
+    &:first-child{ border-top: 0; }
+    h6{ .reset; font-size: 16px; line-height: 1; font-weight: normal; font-style: italic; }
+    .date, .time{ font-size: 14px; color: @lighter_copy_color; }
+    .date{ float: left; }
+    .time{ float: right; }    
+    .artist{ line-height: 1; }
+  }  
 }
