--- a/stylesheets/css/screen.css
+++ b/stylesheets/css/screen.css
@@ -53,7 +53,8 @@ header.main #player{float:right;background:#aaa;text-indent:-999em;height:20px;w
 header.main nav{float:right;clear:right;}header.main nav ul{padding:0;margin:0;list-style-type:none;margin-top:20px;}header.main nav ul li{padding:0;margin:0;float:left;margin-left:40px;}header.main nav ul li a{color:#616060;display:block;padding:10px;font-family:'league-gothic',Impact,Haettenschweiler,'Arial Narrow Bold',sans-serif;font-size:19px;text-transform:uppercase;}header.main nav ul li a:hover{color:#339999;}
 header.main nav ul li.current-menu-item a{color:#3f3c42;}header.main nav ul li.current-menu-item a:hover{color:#339999;}
 header.main .social{clear:right;float:right;color:#777575;font-style:italic;margin-right:10px;margin-top:20px;margin-bottom:10px;}header.main .social a{font-family:'league-gothic',Impact,Haettenschweiler,'Arial Narrow Bold',sans-serif;color:#616060;font-style:normal;font-size:1.1em;text-transform:uppercase;}header.main .social a:hover{color:#339999;}
-section.main{min-height:350px;}
+section.main{min-height:350px;}section.main .left_column{width:480px;float:left;margin-right:100px;}
+section.main .right_column{width:240px;float:left;}
 footer.main{padding:20px 20px 0;margin-top:20px;background:no-repeat top center url(../../images/backgrounds/footer.png);overflow:hidden;}footer.main .copyright{font-size:13px;color:#777575;float:left;line-height:30px;}
 footer.main .social{float:right;}footer.main .social a{float:left;margin-left:40px;height:30px;background:no-repeat center center;text-indent:-999em;}footer.main .social a.facebook{width:84px;background-image:url(../../images/facebook.png);}
 footer.main .social a.youtube{width:63px;background-image:url(../../images/youtube.png);}
@@ -69,3 +70,18 @@ footer.main .social a.twitter{width:74px;background-image:url(../../images/twitt
 .home #featured .featured_artist img{display:block;margin-bottom:10px;}
 .home #featured .featured_artist h4{font-size:24px;margin-bottom:10px;}
 .home #featured .featured_artist p{font-size:15px;margin-bottom:1em;line-height:18px;}
+.featured_events .featured_event{overflow:hidden;margin-bottom:20px;padding-bottom:20px;background:no-repeat bottom right url(../../images/divider.png);}.featured_events .featured_event:last-child{background:none;margin:0;}
+.featured_events .featured_event .date,.featured_events .featured_event .time{font-size:19px;color:#616060;}
+.featured_events .featured_event .date{float:left;}
+.featured_events .featured_event .time{float:right;}
+.featured_events .featured_event h4{clear:both;float:left;font-size:28px;margin:0;}
+.featured_events .featured_event .cost{float:right;font-size:15px;margin-top:12px;}
+.featured_events .featured_event img{display:block;clear:both;margin-bottom:5px;}
+.featured_events .featured_event a{font-family:'league-gothic',Impact,Haettenschweiler,'Arial Narrow Bold',sans-serif;font-size:26px;display:block;text-align:right;}
+.upcoming_shows{padding:0;margin:0;list-style-type:none;}.upcoming_shows li{margin:0 0 5px;padding:5px;overflow:hidden;}.upcoming_shows li.month{border:1px solid #999;border-width:1px 0;}
+.upcoming_shows li:first-child{border-top:0;}
+.upcoming_shows li h6{padding:0;margin:0;font-size:16px;line-height:1;font-weight:normal;font-style:italic;}
+.upcoming_shows li .date,.upcoming_shows li .time{font-size:14px;color:#777575;}
+.upcoming_shows li .date{float:left;}
+.upcoming_shows li .time{float:right;}
+.upcoming_shows li .artist{line-height:1;}
