--- a/stylesheets/less/screen.less
+++ b/stylesheets/less/screen.less
@@ -36,6 +36,9 @@ a{ color: @contrasting_color; text-decoration: none; .transition;
 
 h1, h2, h3, h4{ .sans; padding-top: 0; margin-top: 0; font-weight: normal; }
 h2{ text-transform: uppercase; font-size: 36px; }
+h3{ font-size: 24px; margin-bottom: 0px; }
+
+p{ margin-top: 0; }
 
 /* Header */
 header.main{ background: no-repeat bottom right url(../../images/divider.png); overflow: hidden; margin-bottom: 40px;
