--- a/stylesheets/less/screen.less
+++ b/stylesheets/less/screen.less
@@ -123,7 +123,7 @@ footer.main{ padding: 20px 20px 0; margin-top: 20px; background: no-repeat top c
   }
 }       
 
-/* Events */
+/* Events */                                         
 .featured_events{
   .featured_event{ overflow: hidden; margin-bottom: 20px; padding-bottom: 20px; background: no-repeat bottom right url(../../images/divider.png);
     &:last-child{ background: none; margin: 0; }
@@ -137,11 +137,11 @@ footer.main{ padding: 20px 20px 0; margin-top: 20px; background: no-repeat top c
   }
 }       
 
-.upcoming_shows{ .reset_list;
+.upcoming_shows{ .reset_list; margin: 10px 0; 
   li{ margin: 0 0 5px; padding: 5px; overflow: hidden;                                                                           
     &.month{  border: 1px solid #999; border-width: 1px 0; }
     &:first-child{ border-top: 0; }
-    h6{ .reset; font-size: 16px; line-height: 1; font-weight: normal; font-style: italic; }
+    h6{ .reset; font-size: 16px; line-height: 1; font-weight: normal; font-style: italic; padding-top: 2px; }
     .date, .time{ font-size: 14px; color: @lighter_copy_color; }
     .date{ float: left; }
     .time{ float: right; }    
