--- a/stylesheets/css/screen.css
+++ b/stylesheets/css/screen.css
@@ -78,7 +78,7 @@ footer.main .social a.twitter{width:74px;background-image:url(../../images/twitt
 .featured_events .featured_event .date{float:left;}
 .featured_events .featured_event .time{float:right;}
 .featured_events .featured_event h4{clear:both;float:left;font-size:28px;margin:0;}
-.featured_events .featured_event .cost{float:right;font-size:15px;margin-top:12px;}
+.featured_events .featured_event .cost{float:right;font-size:15px;margin-top:12px;clear:right;}
 .featured_events .featured_event img{display:block;clear:both;margin-bottom:5px;}
 .featured_events .featured_event a{font-family:'league-gothic',Impact,Haettenschweiler,'Arial Narrow Bold',sans-serif;font-size:26px;display:block;text-align:right;}
 .upcoming_shows{padding:0;margin:0;list-style-type:none;margin:10px 0;}.upcoming_shows li{margin:0 0 5px;padding:5px;overflow:hidden;}.upcoming_shows li.month{border:1px solid #999;border-width:1px 0;}
