--- a/stylesheets/less/screen.less
+++ b/stylesheets/less/screen.less
@@ -131,7 +131,7 @@ footer.main{ padding: 20px 20px 0; margin-top: 20px; background: no-repeat top c
     .date{ float: left; }
     .time{ float: right; }   
     h4{ clear: both; float: left; font-size: 28px; margin: 0; }
-    .cost{ float: right; font-size: 15px; margin-top: 12px; }
+    .cost{ float: right; font-size: 15px; margin-top: 12px; clear: right; }
     img{ display: block; clear: both; margin-bottom: 5px; }                 
     a{ .sans; font-size: 26px; display: block; text-align: right; }
   }
